@@ -137,5 +137,35 @@
         <record model="ir.action.keyword" id="account_payment.act_payment_form_group_relate_keyword1">
             <field name="keyword">form_relate</field>
         </record>
+        <!-- ############################################################ -->
+        <!-- ########### Payment Motive ########### -->
+        <!-- ############################################################ -->
+        <record model="ir.ui.view" id="payment_motive_view_form">
+            <field name="model">account.payment.motive</field>
+            <field name="type">form</field>
+            <field name="name">payment_motive_form</field>
+        </record>
+        <record model="ir.ui.view" id="payment_motive_view_list">
+            <field name="model">account.payment.motive</field>
+            <field name="type">tree</field>
+            <field name="name">payment_motive_list</field>
+        </record>
+        <record model="ir.action.act_window" id="act_payment_motive_form">
+            <field name="name">Payment Motive</field>
+            <field name="res_model">account_payment.motive</field>
+        </record>
+
+        <record model="ir.action.act_window.view" id="act_payment_motive_form_view_list">
+            <field name="sequence" eval="10"/>
+            <field name="view" ref="payment_motive_view_list"/>
+            <field name="act_window" ref="act_payment_motive_form"/>
+        </record>
+        <record model="ir.action.act_window.view" id="act_payment_motive_form_view_form">
+            <field name="sequence" eval="20"/>
+            <field name="view" ref="payment_motive_view_form"/>
+            <field name="act_window" ref="act_payment_motive_form"/>
+        </record>
+        <menuitem parent="account_payment.menu_payment_configuration" id="menu_payment_motive_form"
+            icon="tryton-list" action="act_payment_motive_form"/>
     </data>
 </tryton>
