@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<tree string="Payment Motive">
+    <field name="name"/>
+</tree>
