@@ -6,13 +6,13 @@ from .bank import *
 from .test_case import *
 from .account import *
 from .party import *
+from .move import *
 
 
 def register():
     Pool.register(
         Party,
         PaymentTreatmentBatch,
-        # from payment
         Payment,
         Mandate,
         Group,
@@ -20,8 +20,12 @@ def register():
         BankAccountNumber,
         InvoiceLine,
         Journal,
-        # Test case
         TestCaseModel,
         Configuration,
         Message,
+        PaymentCreationStart,
+        MoveLine,
         module='account_payment_sepa_cog', type_='model')
+    Pool.register(
+        PaymentCreation,
+        module='account_payment_sepa_cog', type_='wizard')
