@@ -50,6 +50,12 @@
             <field name="act_window" ref="act_message_form"/>
         </record>
         <menuitem parent="account_payment.menu_payments" sequence="50" action="act_message_form" id="menu_reject_message_form" icon="tryton-list"/>
+        <record model="ir.ui.view" id="payment_creation_start_view_form">
+            <field name="model">account.payment.payment_creation.start</field>
+            <field name="type">form</field>
+            <field name="inherit" ref="account_payment_cog.payment_creation_start_view_form"/>
+            <field name="name">payment_creation_start_form</field>
+        </record>
         <record model="ir.ui.view" id="group_list">
             <field name="model">account.payment.group</field>
             <field name="inherit" ref="account_payment.payment_group_view_list"/>
