@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<data>
+    <xpath expr="/form/label[@name='total_amount']" position="before">
+        <label name="bank_account"/>
+        <field name="bank_account"/>
+    </xpath>
+</data>
