@@ -1,4 +1,5 @@
 * UI enhancement on payment group list view (add amount and payment dates)
+* Add predefined motive on creation payment wizard
 
 Version 1.6 - 2015-12-23
 * Add Acknowledge Batch
